# videoDub-Pro

./: DEPLOY_RENDER.md  Dockerfile  app.py  pyproject.toml  render.yaml  replit.md  requirements-render.txt
attached_assets/: Pasted--pip-install-faster-whisper-ffmpeg-python-pip-install-translate-pip-install-gtts-pysrt-pydub-im-1759351097977_1759351097981.txt
templates/: index.html
utils/: audio_generator.py  subtitle_generator.py  transcriber.py  translator.py  video_processor.py
